--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Makeup Rosa - R$10</title>
+  <title>Pink-Makeup - R$10</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
