Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main>
     <section class="hero">
       <h2>Tudo por R$10,00</h2>
-      <p>Beleza acessível com toque rosa — batons, blush e sombras.</p>
+      <p>Beleza acessível.</p>
     </section>
 
     <section class="products" id="products">
@@ -45,14 +45,14 @@
 
       <article class="product-card">
         <img src="https://source.unsplash.com/400x300/?makeup,kit,pink" alt="Kit maquiagem rosa" />
-        <h3>Mini Kit Rosa</h3>
+        <h3>MASCARA PARA OS CILIOS</h3>
         <p class="price">R$10,00</p>
         <button class="buy" data-name="Mini Kit Rosa" data-price="10">Comprar por R$10,00</button>
       </article>
 
       <article class="product-card">
         <img src="https://source.unsplash.com/400x300/?lipgloss,pink" alt="Gloss rosa" />
-        <h3>Gloss Perolado</h3>
+        <h3>Gloss chaveiro</h3>
         <p class="price">R$10,00</p>
         <button class="buy" data-name="Gloss Perolado" data-price="10">Comprar por R$10,00</button>
       </article>
