Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 <body>
   <header class="site-header">
     <h1>Makeup Rosa</h1>
-    <div class="cart">
+    <div class="product-card">
+    <div class="product-image">
+        <div class="placeholder-image">IMAGEM AQUI</div> 
+    </div>
+    </div>
+
+<div class="cart">
       <button id="cart-btn" aria-label="Carrinho">Carrinho (<span id="cart-count">0</span>)</button>
-    </div>
-  </header>
+   
 
   <main>
     <section class="hero">
