--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Pink-Makeup - R$10</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="Pink-Makeup.css" />
 </head>
 <body>
   <header class="site-header">
@@ -73,6 +73,6 @@
 
   <div id="toast" class="toast" aria-live="polite"></div>
 
-  <script src="script.js"></script>
+  <script src="Pink-Makeup.js"></script>
 </body>
 </html>
