Rename CSS and JS files in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pink Makeup</title>
-    <link rel="stylesheet" href="Pink-Makeup.css">
+    <link rel="stylesheet" href="maquiagem.css">
 </head>
 <body>
 
@@ -38,7 +38,7 @@
         <p>&copy; 2025 Pink Makeup. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="Pink-Makeup.js"></script>
+    <script src="maquiagem.js"></script>
 </body>
 </html>
 
