--- a/index.html
+++ b/index.html
@@ -3,129 +3,165 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Pink-makeup — Loja</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Pink Makeup • Tudo por R$10</title>
+  <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-  <header class="top">
-    <button class="menu-btn" aria-label="menu">☰</button>
-    <div class="brand">
-      <h1 class="logo">Pink-<span class="logo-small">makeup</span></h1>
-      <div class="tag">MAQUIAGENS COM O PREÇO UNICO DE R$10.00</div>
-    </div>
-
-    <div class="actions">
-      <div class="search-wrap">
-        <input id="search-input" class="search" placeholder="Procure um produto..." />
-        <button id="search-btn" class="search-btn">🔍</button>
+  <header class="site-header">
+    <div class="wrap header-inner">
+      <div class="brand">
+        <div class="logo">Pink Makeup</div>
+        <nav class="main-nav">
+          <a>Início</a>
+          <a>Categorias</a>
+          <a>Sobre</a>
+        </nav>
       </div>
 
-      <button id="open-cart" class="cart-btn" title="Carrinho">
-        🛒 <span id="cart-badge" class="badge" style="display:none">0</span>
-      </button>
+      <div class="top-actions">
+        <div class="promo-text">TODOS OS PRODUTOS POR APENAS R$10!</div>
+
+        <div class="cart-wrap">
+          <button id="cartBtn" class="cart-btn" aria-label="Carrinho">
+            🛒 <span id="cartCount" class="cart-count">0</span>
+          </button>
+        </div>
+      </div>
     </div>
   </header>
 
-  <main id="main-view">
-    <section class="hero">
-      <h2>Todos os produtos R$10,00</h2>
-      <p>Escolha, adicione ao carrinho e finalize com PIX ou Cartão.</p>
+  <!-- Banner -->
+  <section class="banner">
+    <img src="/mnt/data/93925EFE-6166-46C8-87BA-43BADE7F0835.jpeg" alt="Banner Pink Makeup" />
+  </section>
+
+  <main class="wrap">
+    <section class="intro">
+      <h1>Pink Makeup</h1>
+      <p class="subtitle">Todos os produtos por apenas <strong>R$10</strong> — escolha seus favoritos!</p>
     </section>
 
-    <section id="products" class="products" aria-live="polite"></section>
+    <!-- Produtos -->
+    <section class="products-grid" id="products">
+      <!-- Produto 1 -->
+      <article class="product" data-id="1" data-price="10">
+        <img src="/mnt/data/2662398A-B79E-4E2A-9DD3-42CC5EFB51D8.jpeg" alt="Ruby Rose Brow Rise Gel" />
+        <h3>Ruby Rose Brow Rise Gel para Sobrancelhas</h3>
+        <p class="desc">Gel incolor com alta fixação e longa duração, ideal para modelar e alinhar os fios das sobrancelhas, podendo ser usado também nos cílios.</p>
+        <div class="product-foot">
+          <div class="price">R$10</div>
+          <button class="add-btn">Adicionar ao carrinho</button>
+        </div>
+      </article>
+
+      <!-- Produto 2 -->
+      <article class="product" data-id="2" data-price="10">
+        <img src="/mnt/data/ACC23FE8-6189-48C6-90DD-AE8790EF367E.jpeg" alt="Melu Blush Compacto" />
+        <h3>Melu by Ruby Rose Blush Compacto</h3>
+        <p class="desc">Blush de alta pigmentação com textura acetinada e alta fixação, para um toque de cor e ar saudável nas bochechas.</p>
+        <div class="product-foot">
+          <div class="price">R$10</div>
+          <button class="add-btn">Adicionar ao carrinho</button>
+        </div>
+      </article>
+
+      <!-- Produto 3 -->
+      <article class="product" data-id="3" data-price="10">
+        <img src="/mnt/data/3A0F08E6-60DA-4098-B440-6BA3F0DA5861.jpeg" alt="Melu Sérum Facial" />
+        <h3>Melu by Ruby Rose Sérum Facial</h3>
+        <p class="desc">Sérum hidratante facial, leve e de rápida absorção, formulado para hidratação e revitalização da pele.</p>
+        <div class="product-foot">
+          <div class="price">R$10</div>
+          <button class="add-btn">Adicionar ao carrinho</button>
+        </div>
+      </article>
+
+      <!-- Produto 4 -->
+      <article class="product" data-id="4" data-price="10">
+        <img src="/mnt/data/344A07AE-637B-4420-A24D-BC2F3C8FC36E.jpeg" alt="Handaiyan Polvo de Fadas" />
+        <h3>Handaiyan Polvo de Fadas (Polvo de Hadas)</h3>
+        <p class="desc">Pó iluminador solto com aplicador em esponja, proporcionando brilho cintilante e radiante ao rosto e corpo.</p>
+        <div class="product-foot">
+          <div class="price">R$10</div>
+          <button class="add-btn">Adicionar ao carrinho</button>
+        </div>
+      </article>
+
+      <!-- Produto 5 -->
+      <article class="product" data-id="5" data-price="10">
+        <img src="/mnt/data/E1AFCE74-7E01-465F-99AB-675AE9810431.jpeg" alt="Labotrat Morango Esfoliante" />
+        <h3>Labotrat Dia a Dia Morango Esfoliante Rosto e Corpo</h3>
+        <p class="desc">Esfoliante com extrato de morango que remove células mortas, ajuda a repor Vitamina C e auxilia na elasticidade da pele.</p>
+        <div class="product-foot">
+          <div class="price">R$10</div>
+          <button class="add-btn">Adicionar ao carrinho</button>
+        </div>
+      </article>
+
+      <!-- Produto 6 -->
+      <article class="product" data-id="6" data-price="10">
+        <img src="/mnt/data/ED2A3827-08A5-45EE-A8A8-298A1DF2A2F6.jpeg" alt="Massageador Couro Cabeludo" />
+        <h3>Massageador de Couro Cabeludo / Escova para Shampoo</h3>
+        <p class="desc">Escova de silicone com pontas macias para massagear o couro cabeludo, estimular a circulação e ajudar na limpeza.</p>
+        <div class="product-foot">
+          <div class="price">R$10</div>
+          <button class="add-btn">Adicionar ao carrinho</button>
+        </div>
+      </article>
+
+      <!-- Produto 7 -->
+      <article class="product" data-id="7" data-price="10">
+        <img src="/mnt/data/A95FCB7C-CA21-4FFA-85EA-CEC6368E7A4E.jpeg" alt="Rolo Facial e Gua Sha" />
+        <h3>Rolo Facial de Pedra e Gua Sha</h3>
+        <p class="desc">Kit de quartzo rosa/jade para massagem facial, melhora a circulação, reduz inchaço e ajuda na absorção de produtos.</p>
+        <div class="product-foot">
+          <div class="price">R$10</div>
+          <button class="add-btn">Adicionar ao carrinho</button>
+        </div>
+      </article>
+
+      <!-- Produto 8 -->
+      <article class="product" data-id="8" data-price="10">
+        <img src="/mnt/data/EF17C975-CD79-4EEE-9A56-C401595E61CD.jpeg" alt="Modelador de Cachos Sem Calor" />
+        <h3>Modelador de Cachos Sem Calor (Heatless Curler)</h3>
+        <p class="desc">Acessório de cetim para criar cachos sem fontes de calor — vem com scrunchies e presilha inclusos.</p>
+        <div class="product-foot">
+          <div class="price">R$10</div>
+          <button class="add-btn">Adicionar ao carrinho</button>
+        </div>
+      </article>
+
+      <!-- Produto 9 -->
+      <article class="product" data-id="9" data-price="10">
+        <img src="/mnt/data/96E3638C-D8AB-41F7-97A1-87FA4A7261C2.jpeg" alt="Presilha Flor" />
+        <h3>Presilha de Cabelo em Formato de Flor</h3>
+        <p class="desc">Prendedor de cabelo em formato de flor, com detalhes em rosa — decorativo e perfeito para penteados rápidos.</p>
+        <div class="product-foot">
+          <div class="price">R$10</div>
+          <button class="add-btn">Adicionar ao carrinho</button>
+        </div>
+      </article>
+    </section>
   </main>
 
-  <!-- CART PAGE -->
-  <section id="cart-page" class="page">
-    <h2>Meu Carrinho</h2>
-
-    <div id="cart-empty" class="cart-empty">Seu carrinho está vazio.</div>
-
-    <div id="cart-list" class="cart-list"></div>
-
-    <div class="cart-right">
-      <div class="coupon">
-        <label for="coupon">CUPOM DE DESCONTO</label>
-        <div class="coupon-row">
-          <input id="coupon" placeholder="Código" />
-          <button id="apply-coupon" class="btn-outline">OK</button>
-        </div>
-        <small class="coupon-help">Use <strong>PINK10</strong> para R$10,00 de desconto no total.</small>
-      </div>
-
-      <div class="summary card">
-        <div><span>SUBTOTAL</span><span id="sub-val">R$0,00</span></div>
-        <div><span>DESCONTOS</span><span id="discount-val">R$0,00</span></div>
-        <div><span>ENTREGA</span><span id="ship-val">R$0,00</span></div>
-        <hr/>
-        <div class="total-row"><strong>TOTAL</strong><strong id="total-val">R$0,00</strong></div>
-
-        <div style="margin-top:14px">
-          <button id="continue-shopping" class="btn-outline">CONTINUAR COMPRANDO</button>
-          <button id="proceed-checkout" class="btn-primary">FECHAR PEDIDO</button>
-        </div>
-      </div>
+  <!-- Cart drawer -->
+  <aside id="cartDrawer" class="cart-drawer">
+    <div class="cart-header">
+      <h3>Seu Carrinho</h3>
+      <button id="closeCart" class="close-cart">✕</button>
     </div>
-  </section>
-
-  <!-- CHECKOUT PAGE -->
-  <section id="checkout-page" class="page">
-    <h2>Finalizar compra</h2>
-    <form id="checkout-form" autocomplete="off" class="checkout-form">
-      <div class="row">
-        <label>Nome completo
-          <input id="nome" required />
-        </label>
-        <label>CPF
-          <input id="cpf" placeholder="000.000.000-00" required />
-        </label>
+    <div id="cartItems" class="cart-items">
+      <p class="empty">Seu carrinho está vazio.</p>
+    </div>
+    <div class="cart-footer">
+      <div class="total-line">
+        <span>Total</span>
+        <strong id="cartTotal">R$0</strong>
       </div>
+      <button id="checkoutBtn" class="checkout-btn">Finalizar Compra</button>
+    </div>
+  </aside>
 
-      <div class="row">
-        <label>Email
-          <input id="email" type="email" />
-        </label>
-        <label>Telefone
-          <input id="telefone" placeholder="(99) 9 9999-9999" />
-        </label>
-      </div>
-
-      <fieldset class="pay-methods">
-        <legend>Forma de pagamento</legend>
-        <div class="payment-methods">
-          <button type="button" class="paybox" data-pay="pix" id="pay-pix">PIX</button>
-          <button type="button" class="paybox" data-pay="card" id="pay-card">Cartão (Crédito/Débito)</button>
-        </div>
-      </fieldset>
-
-      <div id="pix-box" class="paybox-area" style="display:none">
-        <p>Chave Pix: <strong>pix@pink-makeup.fake</strong></p>
-        <div class="qr">QR</div>
-        <button type="button" id="btn-pay-pix" class="btn-primary">Pagar com PIX (simulado)</button>
-      </div>
-
-      <div id="card-box" class="paybox-area" style="display:none">
-        <div class="row">
-          <label>Nome no cartão<input id="card-name" /></label>
-          <label>Número do cartão<input id="card-number" maxlength="19" placeholder="0000 0000 0000 0000" /></label>
-        </div>
-        <div class="row">
-          <label>Validade<input id="exp" maxlength="5" placeholder="MM/AA" /></label>
-          <label>CVV<input id="cvv" maxlength="4" /></label>
-        </div>
-        <button type="button" id="btn-pay-card" class="btn-primary">Pagar (simulado)</button>
-      </div>
-
-      <div class="summary card checkout-summary">
-        <div>TOTAL A PAGAR: <strong id="checkout-total">R$0,00</strong></div>
-      </div>
-
-      <div style="margin-top:12px">
-        <button type="button" id="back-to-cart" class="btn-outline">Voltar ao carrinho</button>
-      </div>
-    </form>
-  </section>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
