--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="products-grid" id="products">
       <!-- Produto 1 -->
       <article class="product" data-id="1" data-price="10">
-        <img src="/mnt/data/2662398A-B79E-4E2A-9DD3-42CC5EFB51D8.jpeg" alt="Ruby Rose Brow Rise Gel" />
+        <img src="Ruby1.jpg" />
         <h3>Ruby Rose Brow Rise Gel para Sobrancelhas</h3>
         <p class="desc">Gel incolor com alta fixação e longa duração, ideal para modelar e alinhar os fios das sobrancelhas, podendo ser usado também nos cílios.</p>
         <div class="product-foot">
