--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
   <!-- Banner -->
   <section class="banner">
-    <img src="/mnt/data/93925EFE-6166-46C8-87BA-43BADE7F0835.jpeg" alt="Banner Pink Makeup" />
   </section>
 
   <main class="wrap">
@@ -56,7 +55,7 @@
 
       <!-- Produto 2 -->
       <article class="product" data-id="2" data-price="10">
-        <img src="/mnt/data/ACC23FE8-6189-48C6-90DD-AE8790EF367E.jpeg" alt="Melu Blush Compacto" />
+        <img src="download.jpg" />
         <h3>Melu by Ruby Rose Blush Compacto</h3>
         <p class="desc">Blush de alta pigmentação com textura acetinada e alta fixação, para um toque de cor e ar saudável nas bochechas.</p>
         <div class="product-foot">
@@ -67,7 +66,7 @@
 
       <!-- Produto 3 -->
       <article class="product" data-id="3" data-price="10">
-        <img src="/mnt/data/3A0F08E6-60DA-4098-B440-6BA3F0DA5861.jpeg" alt="Melu Sérum Facial" />
+        <img src="melu1.jpg" />
         <h3>Melu by Ruby Rose Sérum Facial</h3>
         <p class="desc">Sérum hidratante facial, leve e de rápida absorção, formulado para hidratação e revitalização da pele.</p>
         <div class="product-foot">
@@ -78,7 +77,7 @@
 
       <!-- Produto 4 -->
       <article class="product" data-id="4" data-price="10">
-        <img src="/mnt/data/344A07AE-637B-4420-A24D-BC2F3C8FC36E.jpeg" alt="Handaiyan Polvo de Fadas" />
+        <img src="brilho1.jpg" />
         <h3>Handaiyan Polvo de Fadas (Polvo de Hadas)</h3>
         <p class="desc">Pó iluminador solto com aplicador em esponja, proporcionando brilho cintilante e radiante ao rosto e corpo.</p>
         <div class="product-foot">
@@ -89,7 +88,7 @@
 
       <!-- Produto 5 -->
       <article class="product" data-id="5" data-price="10">
-        <img src="/mnt/data/E1AFCE74-7E01-465F-99AB-675AE9810431.jpeg" alt="Labotrat Morango Esfoliante" />
+        <img src="esfoliante.jpg" />
         <h3>Labotrat Dia a Dia Morango Esfoliante Rosto e Corpo</h3>
         <p class="desc">Esfoliante com extrato de morango que remove células mortas, ajuda a repor Vitamina C e auxilia na elasticidade da pele.</p>
         <div class="product-foot">
@@ -100,7 +99,7 @@
 
       <!-- Produto 6 -->
       <article class="product" data-id="6" data-price="10">
-        <img src="/mnt/data/ED2A3827-08A5-45EE-A8A8-298A1DF2A2F6.jpeg" alt="Massageador Couro Cabeludo" />
+        <img src="escova.jpg" />
         <h3>Massageador de Couro Cabeludo / Escova para Shampoo</h3>
         <p class="desc">Escova de silicone com pontas macias para massagear o couro cabeludo, estimular a circulação e ajudar na limpeza.</p>
         <div class="product-foot">
@@ -111,7 +110,7 @@
 
       <!-- Produto 7 -->
       <article class="product" data-id="7" data-price="10">
-        <img src="/mnt/data/A95FCB7C-CA21-4FFA-85EA-CEC6368E7A4E.jpeg" alt="Rolo Facial e Gua Sha" />
+        <img src="masageador.jpg" />
         <h3>Rolo Facial de Pedra e Gua Sha</h3>
         <p class="desc">Kit de quartzo rosa/jade para massagem facial, melhora a circulação, reduz inchaço e ajuda na absorção de produtos.</p>
         <div class="product-foot">
@@ -122,7 +121,7 @@
 
       <!-- Produto 8 -->
       <article class="product" data-id="8" data-price="10">
-        <img src="/mnt/data/EF17C975-CD79-4EEE-9A56-C401595E61CD.jpeg" alt="Modelador de Cachos Sem Calor" />
+        <img src="cabelo.jpg" />
         <h3>Modelador de Cachos Sem Calor (Heatless Curler)</h3>
         <p class="desc">Acessório de cetim para criar cachos sem fontes de calor — vem com scrunchies e presilha inclusos.</p>
         <div class="product-foot">
@@ -133,7 +132,7 @@
 
       <!-- Produto 9 -->
       <article class="product" data-id="9" data-price="10">
-        <img src="/mnt/data/96E3638C-D8AB-41F7-97A1-87FA4A7261C2.jpeg" alt="Presilha Flor" />
+        <img src="presilia.jpg" />
         <h3>Presilha de Cabelo em Formato de Flor</h3>
         <p class="desc">Prendedor de cabelo em formato de flor, com detalhes em rosa — decorativo e perfeito para penteados rápidos.</p>
         <div class="product-foot">
